--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <link rel="stylesheet" href="/output/output.css" />
     <title>about MGT</title>
   </head>
@@ -16,7 +18,11 @@
       <div class="flex justify-between items-center">
         <!-- Logo Section -->
         <div class="flex items-center">
-          <img src="images/index.png" alt="Company Logo" class="h-10 ml-4 lg:ml-32" />
+          <img
+            src="images/index.png"
+            alt="Company Logo"
+            class="h-10 ml-4 lg:ml-32"
+          />
           <h1 class="font-bold text-2xl ml-3">
             <span class="text-blue-500">Madoms</span> Global
             <span class="text-blue-500">Trade</span>
@@ -40,9 +46,11 @@
               <a href="about.html" class="hover:text-blue-500 mr-8">About</a>
             </li>
             <li class="relative mr-8">
-              <div  class="flex items-center">
+              <div class="flex items-center">
                 <button><a href="services.html">Services </a></button>
-               <button> <i id="dropdownToggle" class="fas fa-chevron-down ml-2"></i> </button>
+                <button>
+                  <i id="dropdownToggle" class="fas fa-chevron-down ml-2"></i>
+                </button>
               </div>
               <!-- Dropdown Menu -->
               <ul
@@ -75,7 +83,9 @@
               <a href="news.html" class="hover:text-blue-500 mr-8">News</a>
             </li>
             <li>
-              <a href="contact.html" class="hover:text-blue-500 mr-8">Contact</a>
+              <a href="contact.html" class="hover:text-blue-500 mr-8"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -88,47 +98,53 @@
     >
       <div class="absolute inset-0 bg-black bg-opacity-50"></div>
       <div class="relative py-32 text-white">
-      
-          <p
-            class="text-center sm:text-4xl md:text-5xl font-bold leading-relaxed"
-          >
-            ABOUT US
-          </p>
-        
+        <p
+          class="text-center sm:text-4xl md:text-5xl font-bold leading-relaxed"
+        >
+          ABOUT US
+        </p>
       </div>
     </div>
     <!-- About -->
-<div class="mx-6 sm:mx-12 lg:mx-32 mt-20 flex flex-col lg:flex-row pb-20 gap-10">
-  <!-- Image Section -->
-  <div class="lg:w-1/2 flex items-center justify-center">
-    <img src="images/about.jpg" alt="About Madoms Global Trade" class="w-full h-72 object-cover rounded-lg" />
-  </div>
+    <div
+      class="mx-6 sm:mx-12 lg:mx-32 mt-20 flex flex-col lg:flex-row pb-20 gap-10"
+    >
+      <!-- Image Section -->
+      <div class="lg:w-1/2 flex items-center justify-center">
+        <img
+          src="images/about.jpg"
+          alt="About Madoms Global Trade"
+          class="w-full h-72 object-cover rounded-lg"
+        />
+      </div>
 
-  <!-- Text Section -->
-  <div class="lg:w-1/2 flex flex-col justify-center px-4 lg:px-0">
-    <h1 class="text-3xl lg:text-4xl font-bold mb-6 text-center lg:text-left text-gray-600">
-      Company Overview
-    </h1>
-    <p class="text-gray-700 leading-relaxed text-justify">
-      The C.E.O of Madoms Global Trade, 
-      <span class="font-semibold">Mr Segun Durojaye</span>, is a seasoned 
-      entrepreneur and holds numerous certifications in various fields such as 
-      Logistics, Clearing and Forwarding, Project Management, and Financing. 
-      He has provided leadership for numerous companies in finance management, 
-      import and export trade processes, project management, and trade-finance 
-      consultation services.
-    </p>
-    <p class="text-gray-700 leading-relaxed text-justify mt-4">
-      Madoms Global Trade was established in 2014 as a financing company and has 
-      now emerged as one of the leading names in the Trade Finance Industry. 
-      Madoms Global Trade is a platform that serves you with the best expertise 
-      to understand your complex trade transactions and ensure you get timely 
-      and optimal solutions for your business requirements. Our comprehensive 
-      range of trade finance solutions allows our clients to gain access to 
-      cross-border opportunities.
-    </p>
-  </div>
-</div>
+      <!-- Text Section -->
+      <div class="lg:w-1/2 flex flex-col justify-center px-4 lg:px-0">
+        <h1
+          class="text-3xl lg:text-4xl font-bold mb-6 text-center lg:text-left text-gray-600"
+        >
+          Company Overview
+        </h1>
+        <p class="text-gray-700 leading-relaxed text-justify">
+          The C.E.O of Madoms Global Trade,
+          <span class="font-semibold">Mr Segun Durojaye</span>, is a seasoned
+          entrepreneur and holds numerous certifications in various fields such
+          as Logistics, Clearing and Forwarding, Project Management, and
+          Financing. He has provided leadership for numerous companies in
+          finance management, import and export trade processes, project
+          management, and trade-finance consultation services.
+        </p>
+        <p class="text-gray-700 leading-relaxed text-justify mt-4">
+          Madoms Global Trade was established in 2014 as a financing company and
+          has now emerged as one of the leading names in the Trade Finance
+          Industry. Madoms Global Trade is a platform that serves you with the
+          best expertise to understand your complex trade transactions and
+          ensure you get timely and optimal solutions for your business
+          requirements. Our comprehensive range of trade finance solutions
+          allows our clients to gain access to cross-border opportunities.
+        </p>
+      </div>
+    </div>
 
     <!-- vision and mission -->
     <div class="bg-blue-300">
@@ -179,12 +195,12 @@
     <!-- why choose mgt -->
     <div class="bg-[rgba(201,201,178,0.5)]">
       <div class="max-w-2xl mx-auto py-16">
-        <h1 class="text-3xl text-blue-700 font-bold mb-10 text-center">Why Choose MGT?</h1>
+        <h1 class="text-3xl text-blue-700 font-bold mb-10 text-center">
+          Why Choose MGT?
+        </h1>
         <!-- one -->
         <div class="flex mb-6 max-w-2xl">
-          <div
-            class="flex items-center rounded-s-xl bg-blue-900 w-32"
-          >
+          <div class="flex items-center rounded-s-xl bg-blue-900 w-32">
             <i class="fa-solid fa-thumbs-up text-8xl text-white"></i>
           </div>
           <div
@@ -205,7 +221,7 @@
             <i class="fa-solid fa-headset text-8xl text-white"></i>
           </div>
           <div
-            class="bg-white  flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
+            class="bg-white flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
           >
             <h2 class="text-xl font-bold text-blue-900 mb-2">
               All-round Support
@@ -270,12 +286,16 @@
     </div>
     <!-- Team -->
     <div>
-      <h1 class="mt-10 text-center mb-5 text-blue-700 font-bold text-2xl sm:text-3xl lg:text-4xl">
+      <h1
+        class="mt-10 text-center mb-5 text-blue-700 font-bold text-2xl sm:text-3xl lg:text-4xl"
+      >
         Meet Our Team Members
       </h1>
 
       <!-- Team Grid -->
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-7 px-5 sm:px-10 lg:px-32 mb-16">
+      <div
+        class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-7 px-5 sm:px-10 lg:px-32 mb-16"
+      >
         <!-- CEO -->
         <div class="group bg-blue-600 rounded-lg p-4 text-center relative">
           <img
@@ -351,7 +371,9 @@
     >
       <div class="absolute inset-0 bg-black bg-opacity-50"></div>
 
-      <footer class="relative grid grid-cols-1 md:grid-cols-3 gap-4 text-white pb-10">
+      <footer
+        class="relative grid grid-cols-1 md:grid-cols-3 gap-4 text-white pb-10"
+      >
         <form class="pl-5">
           <h1 class="text-xl font-bold mb-5">Let's Hear from You</h1>
           <label for="" class="block text-lg">Name</label>
@@ -381,7 +403,8 @@
           <textarea
             name=""
             id=""
-            placeholder="Type your message here" cols="23"
+            placeholder="Type your message here"
+            cols="23"
             class="rounded-lg border-blue-600 block text-gray-950 p-2"
           ></textarea>
           <button class="mt-4 px-8 py-1 rounded-xl bg-blue-700">Send</button>
@@ -422,7 +445,7 @@
       <p
         class="absolute bottom-0 left-0 w-full text-center bg-blue-700 px-5 py-3 text-white"
       >
-      © <span id="year"></span>  Madoms Global Trade.  All rights reserved.</p>
+        © <span id="year"></span> Madoms Global Trade. All rights reserved.
       </p>
     </div>
     <script src="script.js"></script>
