--- a/index.html
+++ b/index.html
@@ -7,23 +7,29 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <link rel="stylesheet" href="/output/output.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Home</title>
   </head>
   <body>
     <!-- Navbar -->
-    <div class= "p-8 bg-white shadow-md ">
+    <div class="p-8 bg-white shadow-md">
       <div class="flex justify-between items-center">
         <!-- Logo Section -->
-        <div class="flex items-center" >
-          <img src="images/index.png" alt="Company Logo" class="h-10 ml-4 lg:ml-32" />
-          <h1 class="font-bold text-2xl ml-3 ">
+        <div class="flex items-center">
+          <img
+            src="images/index.png"
+            alt="Company Logo"
+            class="h-10 ml-4 lg:ml-32"
+          />
+          <h1 class="font-bold text-2xl ml-3">
             <span class="text-blue-500">Madoms</span> Global
             <span class="text-blue-500">Trade</span>
           </h1>
         </div>
-        <div class="block ">
+        <div class="block">
           <!-- Hamburger Menu Icon -->
           <button
             id="menuToggle"
@@ -40,10 +46,12 @@
             <li>
               <a href="about.html" class="hover:text-blue-500 mr-8">About</a>
             </li>
-            <li class="relative mr-8"> 
-              <div  class="flex items-center">
+            <li class="relative mr-8">
+              <div class="flex items-center">
                 <button><a href="services.html">Services </a></button>
-               <button> <i id="dropdownToggle" class="fas fa-chevron-down ml-2"></i> </button>
+                <button>
+                  <i id="dropdownToggle" class="fas fa-chevron-down ml-2"></i>
+                </button>
               </div>
               <!-- Dropdown Menu -->
               <ul
@@ -76,7 +84,9 @@
               <a href="news.html" class="hover:text-blue-500 mr-8">News</a>
             </li>
             <li>
-              <a href="contact.html" class="hover:text-blue-500 mr-8 ">Contact</a>
+              <a href="contact.html" class="hover:text-blue-500 mr-8"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -163,13 +173,15 @@
       <img
         src="images/aboutpage.jpg"
         alt="About Us"
-        class="mt-12 lg:mt-32 w-full lg:w-1/2 object-cover  p-10"
+        class="mt-12 lg:mt-32 w-full lg:w-1/2 object-cover p-10"
       />
     </div>
 
     <!-- services section -->
     <div class="mx-4 sm:mx-8 lg:mx-32 mt-16">
-      <h1 class="text-2xl sm:text-3xl text-blue-500 font-bold text-center">Our Services</h1>
+      <h1 class="text-2xl sm:text-3xl text-blue-500 font-bold text-center">
+        Our Services
+      </h1>
       <p class="text-base sm:text-lg font-semibold my-5 text-center">
         Our aim is to assist both existing and prospective clients to be
         successful in the trade finance project.
@@ -294,48 +306,48 @@
     </div>
 
     <!-- why choose mgt -->
-     <div class="bg-[rgba(201,201,178,0.5)] ">
-    <div class="mt-28 max-w-2xl mx-auto py-10 ">
-      <h1 class="text-3xl text-blue-700 font-bold mb-10 text-center">
-        Why Choose MGT?
-      </h1>
-      <!-- item -->
-      <div
-        class="flex items-center gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
-      >
-        <i class="fa-solid fa-thumbs-up text-6xl text-white"></i>
-        <h2 class="text-lg font-bold text-white">We are Trusted</h2>
-      </div>
-      <!-- item -->
-      <div
-        class="flex items-center gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
-      >
-        <i class="fa-solid fa-headset text-6xl text-white"></i>
-        <h2 class="text-lg font-bold text-white">All-round Support</h2>
-      </div>
-      <!-- item -->
-      <div
-        class="flex items-center gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
-      >
-        <i class="fa-solid fa-truck-fast text-6xl text-white"></i>
-        <h2 class="text-lg font-bold text-white">Fast Delivery</h2>
-      </div>
-      <!-- item -->
-      <div
-        class="flex items-center gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
-      >
-        <i class="fa-solid fa-award text-6xl text-white"></i>
-        <h2 class="text-lg font-bold text-white">100% Guarantee</h2>
-      </div>
-      <!-- item -->
-      <div
-        class="flex items-center gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
-      >
-        <i class="fa-solid fa-user-group text-6xl text-white"></i>
-        <h2 class="text-lg font-bold text-white">Highly Dedicated Team</h2>
+    <div class="bg-[rgba(201,201,178,0.5)]">
+      <div class="mt-28 max-w-2xl mx-auto py-10">
+        <h1 class="text-3xl text-blue-700 font-bold mb-10 text-center">
+          Why Choose MGT?
+        </h1>
+        <!-- item -->
+        <div
+          class="flex items-center gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
+        >
+          <i class="fa-solid fa-thumbs-up text-6xl text-white"></i>
+          <h2 class="text-lg font-bold text-white">We are Trusted</h2>
+        </div>
+        <!-- item -->
+        <div
+          class="flex items-center gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
+        >
+          <i class="fa-solid fa-headset text-6xl text-white"></i>
+          <h2 class="text-lg font-bold text-white">All-round Support</h2>
+        </div>
+        <!-- item -->
+        <div
+          class="flex items-center gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
+        >
+          <i class="fa-solid fa-truck-fast text-6xl text-white"></i>
+          <h2 class="text-lg font-bold text-white">Fast Delivery</h2>
+        </div>
+        <!-- item -->
+        <div
+          class="flex items-center gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
+        >
+          <i class="fa-solid fa-award text-6xl text-white"></i>
+          <h2 class="text-lg font-bold text-white">100% Guarantee</h2>
+        </div>
+        <!-- item -->
+        <div
+          class="flex items-center gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
+        >
+          <i class="fa-solid fa-user-group text-6xl text-white"></i>
+          <h2 class="text-lg font-bold text-white">Highly Dedicated Team</h2>
+        </div>
       </div>
     </div>
-     </div>
     <!-- stats -->
     <div class="bg-blue-300 px-4 py-16 shadow-md">
       <h2 class="text-3xl font-extrabold text-center mb-12 text-blue-800">
@@ -503,18 +515,18 @@
       <div class="absolute inset-0 bg-black bg-opacity-50"></div>
 
       <footer
-        class="relative grid grid-cols-1 md:grid-cols-3 gap-4 pb-10 text-white "
+        class="relative grid grid-cols-1 md:grid-cols-3 gap-4 pb-10 text-white"
       >
         <form class="pl-5">
           <h1 class="text-xl font-bold mb-5">Let's Hear from You</h1>
-          <label for="" class="block text-lg ">Name</label>
+          <label for="" class="block text-lg">Name</label>
           <input
             type="text"
             class="rounded-lg border-blue-600 p-2 text-gray-950"
           />
           <br />
           <br />
-          <label for="" class="block text-lg ">Phone Number</label>
+          <label for="" class="block text-lg">Phone Number</label>
           <input
             type="text"
             name=""
@@ -523,22 +535,19 @@
           />
           <br />
           <br />
-          <label for="" class="block text-lg"
-            >Email Address</label
-          >
+          <label for="" class="block text-lg">Email Address</label>
           <input
             type="email"
             class="rounded-lg border-blue-600 p-2 text-gray-950"
           />
           <br />
           <br />
-          <label for="Message" class="block text-lg"
-            >Messsage</label
-          >
+          <label for="Message" class="block text-lg">Messsage</label>
           <textarea
             name=""
             id=""
-            placeholder="Type your message here" cols="23"
+            placeholder="Type your message here"
+            cols="23"
             class="rounded-lg border-blue-600 block text-gray-950 p-2"
           ></textarea>
           <button class="mt-4 px-8 py-1 rounded-xl bg-blue-700">Send</button>
@@ -547,14 +556,14 @@
           <h1 class="text-xl font-bold">Contact Details</h1>
           <div class="flex mt-5 items-center mb-10">
             <i class="fa-solid fa-envelope text-3xl"></i>
-            <div class="ml-5 text-lg ">
+            <div class="ml-5 text-lg">
               <p>enquiries@mgtnigeria.com</p>
               <p>customercare@mgtnigeria.com</p>
             </div>
           </div>
           <div class="flex items-center mb-10">
             <i class="fa-solid fa-phone text-3xl"></i>
-            <p class="ml-5 text-lg ">+2347033716203</p>
+            <p class="ml-5 text-lg">+2347033716203</p>
           </div>
           <div class="flex items-center mt-5">
             <i class="fa-solid fa-location-dot text-3xl"></i>
@@ -578,9 +587,9 @@
       </footer>
       <p
         class="absolute bottom-0 left-0 w-full text-center bg-blue-700 px-5 py-3 text-white"
-      >  
-      © <span id="year"></span>  Madoms Global Trade.  All rights reserved.</p>
-
+      >
+        © <span id="year"></span> Madoms Global Trade. All rights reserved.
+      </p>
     </div>
 
     <script src="script.js"></script>
