--- a/news.html
+++ b/news.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/output/output.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/output/output.css" />
+
     <title>News and Event</title>
   </head>
   <body>
@@ -16,7 +18,11 @@
       <div class="flex justify-between items-center">
         <!-- Logo Section -->
         <div class="flex items-center">
-          <img src="images/index.png" alt="Company Logo" class="h-10 ml-4 lg:ml-32" />
+          <img
+            src="images/index.png"
+            alt="Company Logo"
+            class="h-10 ml-4 lg:ml-32"
+          />
           <h1 class="font-bold text-2xl ml-3">
             <span class="text-blue-500">Madoms</span> Global
             <span class="text-blue-500">Trade</span>
@@ -241,7 +247,8 @@
           <textarea
             name=""
             id=""
-            placeholder="Type your message here" cols="23"
+            placeholder="Type your message here"
+            cols="23"
             class="rounded-lg border-blue-600 block text-gray-950 p-2"
           ></textarea>
           <button class="mt-4 px-8 py-1 rounded-xl bg-blue-700">Send</button>
@@ -282,7 +289,8 @@
       <p
         class="absolute bottom-0 left-0 w-full text-center bg-blue-700 px-5 py-3 text-white"
       >
-      © <span id="year"></span>  Madoms Global Trade.  All rights reserved.</p>      </p>
+        © <span id="year"></span> Madoms Global Trade. All rights reserved.
+      </p>
     </div>
     <script src="script.js"></script>
   </body>
