--- a/about.html
+++ b/about.html
@@ -17,16 +17,19 @@
     <div class="p-8 bg-white shadow-md">
       <div class="flex justify-between items-center">
         <!-- Logo Section -->
-        <div class="flex items-center">
-          <img
-            src="images/index.png"
-            alt="Company Logo"
-            class="h-10 ml-4 lg:ml-32"
-          />
-          <h1 class="font-bold text-2xl ml-3">
-            <span class="text-blue-500">Madoms</span> Global
-            <span class="text-blue-500">Trade</span>
-          </h1>
+        <div>
+          <a href="index.html" class="flex mr-10">
+            <img
+              src="images/index.png"
+              alt="Company Logo"
+              class="h-10 ml-4 lg:ml-32"
+            />
+
+            <h1 class="font-bold text-2xl ml-3">
+              <span class="text-blue-500">Madoms</span> Global
+              <span class="text-blue-500">Trade</span>
+            </h1>
+          </a>
         </div>
         <div class="block">
           <!-- Hamburger Menu Icon -->
@@ -146,146 +149,180 @@
       </div>
     </div>
 
-    <!-- vision and mission -->
+    <!-- Vision and Mission Section -->
     <div class="bg-blue-300">
       <div
-        class="mx-6 sm:mx-12 lg:mx-32 grid gap-10 lg:grid-cols-2 p-10 lg:p-20"
+        class="mx-6 sm:mx-12 lg:mx-32 grid gap-10 lg:gap-16 lg:grid-cols-2 p-8 sm:p-12 lg:p-20"
       >
-        <!-- mission -->
-        <div class="p-6 rounded-lg shadow-lg flex gap-6">
-          <div class="mt-10">
-            <img src="images/mission.png" alt="" class="w-24" />
+        <!-- Mission -->
+        <div class="rounded-lg flex gap-6 bg-white p-8 shadow-md">
+          <div class="mt-6 flex-shrink-0">
+            <img
+              src="images/mission.png"
+              alt="Mission Icon"
+              class="w-20 lg:w-24"
+            />
           </div>
           <div class="flex-1">
             <button
-              class="mb-5 cursor-none uppercase bg-blue-600 text-white p-4"
+              class="mb-4 uppercase bg-blue-600 text-white py-2 px-4 text-sm lg:text-base font-semibold rounded-md"
             >
               Who we are
             </button>
             <h1 class="text-xl lg:text-2xl font-bold mb-4">Our Mission</h1>
-            <p class="text-justify">
-              Our mission is to use expertise, technology and networks to become
-              the centre of excellence in financial solutions and also provide
-              our cliens with what they need to push their transactions with
-              competitive charges.
+            <p class="text-gray-700 leading-relaxed text-justify">
+              Our mission is to use expertise, technology, and networks to
+              become the centre of excellence in financial solutions and also
+              provide our clients with what they need to push their transactions
+              with competitive charges.
             </p>
           </div>
         </div>
-        <!-- vision -->
-        <div class="p-6 rounded-lg shadow-lg flex gap-6">
-          <div class="mt-10">
-            <img src="images/vision.png" alt="" class="w-20" />
+        <!-- Vision -->
+        <div class="rounded-lg flex gap-6 bg-white p-8 shadow-md">
+          <div class="mt-6 flex-shrink-0">
+            <img
+              src="images/vision.png"
+              alt="Vision Icon"
+              class="w-20 lg:w-24"
+            />
           </div>
           <div class="flex-1">
             <button
-              class="mb-5 cursor-none uppercase bg-blue-600 text-white p-4"
+              class="mb-4 uppercase bg-blue-600 text-white py-2 px-4 text-sm lg:text-base font-semibold rounded-md"
             >
               What we strive for
             </button>
-            <h1 class="text-2xl font-bold mb-4">Our Vision</h1>
-            <p class="">
+            <h1 class="text-xl lg:text-2xl font-bold mb-4">Our Vision</h1>
+            <p class="text-gray-700 leading-relaxed text-justify">
               Our vision is to be the most trusted and respected local and
               global source of financial guidance and solutions. To
-              revolutionise the trade finance business.
+              revolutionize the trade finance business.
             </p>
           </div>
         </div>
       </div>
     </div>
+
     <!-- why choose mgt -->
     <div class="bg-[rgba(201,201,178,0.5)]">
-      <div class="max-w-2xl mx-auto py-16">
+      <div class="mx-16 lg:mx-32 py-10 lg:py-16">
         <h1 class="text-3xl text-blue-700 font-bold mb-10 text-center">
           Why Choose MGT?
         </h1>
-        <!-- one -->
-        <div class="flex mb-6 max-w-2xl">
-          <div class="flex items-center rounded-s-xl bg-blue-900 w-32">
-            <i class="fa-solid fa-thumbs-up text-8xl text-white"></i>
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10">
+          <!-- one -->
+
+          <div class="flex mb-6">
+            <div class="flex items-center rounded-s-xl bg-blue-900 w-32">
+              <i class="fa-solid fa-thumbs-up text-8xl text-white"></i>
+            </div>
+            <div
+              class="bg-white flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
+            >
+              <h2 class="text-xl font-bold text-blue-900 mb-2">
+                We are Trusted
+              </h2>
+              <p class="text-lg text-blue-900">
+                Our clients trust us for delivering quality as we are built on
+                integrity and reliability.
+              </p>
+            </div>
           </div>
-          <div
-            class="bg-white flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
-          >
-            <h2 class="text-xl font-bold text-blue-900 mb-2">We are Trusted</h2>
-            <p class="text-lg text-blue-900">
-              Our clients trust us for delivering quality as we are built on
-              integrity and reliability.
-            </p>
+          <!-- two -->
+          <div class="flex mb-6">
+            <div
+              class="flex justify-center items-center rounded-s-xl bg-blue-900 w-32"
+            >
+              <i class="fa-solid fa-headset text-8xl text-white"></i>
+            </div>
+            <div
+              class="bg-white flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
+            >
+              <h2 class="text-xl font-bold text-blue-900 mb-2">
+                All-round Support
+              </h2>
+              <p class="text-lg text-blue-900">
+                Our team is ready to support you at every step of the way.
+              </p>
+            </div>
           </div>
-        </div>
-        <!-- two -->
-        <div class="flex mb-6 max-w-2xl">
-          <div
-            class="flex justify-center items-center rounded-s-xl bg-blue-900 w-32"
-          >
-            <i class="fa-solid fa-headset text-8xl text-white"></i>
+          <!-- three -->
+          <div class="flex mb-6">
+            <div
+              class="flex justify-center items-center rounded-s-xl bg-blue-900 w-32"
+            >
+              <i class="fa-solid fa-truck-fast text-8xl text-white"></i>
+            </div>
+            <div
+              class="bg-white flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
+            >
+              <h2 class="text-xl font-bold text-blue-900 mb-2">
+                Fast Delivery
+              </h2>
+              <p class="text-lg text-blue-900">
+                We value your time and ensure swift completion of tasks.
+              </p>
+            </div>
           </div>
-          <div
-            class="bg-white flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
-          >
-            <h2 class="text-xl font-bold text-blue-900 mb-2">
-              All-round Support
-            </h2>
-            <p class="text-lg text-blue-900">
-              Our team is ready to support you at every step of the way.
-            </p>
+          <!-- four -->
+          <div class="flex mb-6">
+            <div
+              class="flex justify-center items-center rounded-s-xl bg-blue-900 w-32"
+            >
+              <i class="fa-solid fa-award text-8xl text-white"></i>
+            </div>
+            <div
+              class="bg-white flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
+            >
+              <h2 class="text-xl font-bold text-blue-900 mb-2">
+                100% Guarantee
+              </h2>
+              <p class="text-lg text-blue-900">
+                We stand by the quality of our work with a complete satisfaction
+                guarantee.
+              </p>
+            </div>
           </div>
-        </div>
-        <!-- three -->
-        <div class="flex mb-6 max-w-2xl">
-          <div
-            class="flex justify-center items-center rounded-s-xl bg-blue-900 w-32"
-          >
-            <i class="fa-solid fa-truck-fast text-8xl text-white"></i>
+          <!-- five -->
+          <div class="flex mb-6">
+            <div
+              class="flex justify-center items-center rounded-s-xl bg-blue-900 w-32"
+            >
+              <i class="fa-solid fa-user-group text-8xl text-white"></i>
+            </div>
+            <div
+              class="bg-white flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
+            >
+              <h2 class="text-xl font-bold text-blue-900 mb-2">
+                Highly Dedicated Team
+              </h2>
+              <p class="text-lg text-blue-900">
+                Our passionate team ensures every project is executed
+                flawlessly.
+              </p>
+            </div>
           </div>
-          <div
-            class="bg-white flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
-          >
-            <h2 class="text-xl font-bold text-blue-900 mb-2">Fast Delivery</h2>
-            <p class="text-lg text-blue-900">
-              We value your time and ensure swift completion of tasks.
-            </p>
-          </div>
-        </div>
-        <!-- four -->
-        <div class="flex mb-6 max-w-2xl">
-          <div
-            class="flex justify-center items-center rounded-s-xl bg-blue-900 w-32"
-          >
-            <i class="fa-solid fa-award text-8xl text-white"></i>
-          </div>
-          <div
-            class="bg-white flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
-          >
-            <h2 class="text-xl font-bold text-blue-900 mb-2">100% Guarantee</h2>
-            <p class="text-lg text-blue-900">
-              We stand by the quality of our work with a complete satisfaction
-              guarantee.
-            </p>
-          </div>
-        </div>
-        <!-- five -->
-        <div class="flex max-w-2xl">
-          <div
-            class="flex justify-center items-center rounded-s-xl bg-blue-900 w-32"
-          >
-            <i class="fa-solid fa-user-group text-8xl text-white"></i>
-          </div>
-          <div
-            class="bg-white flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
-          >
-            <h2 class="text-xl font-bold text-blue-900 mb-2">
-              Highly Dedicated Team
-            </h2>
-            <p class="text-lg text-blue-900">
-              Our passionate team ensures every project is executed flawlessly.
-            </p>
+          <div class="hidden lg:block mt-11">
+            <a href="index.html">
+              <button
+                class="bg-blue-900 text-white text-5xl p-5 mb-6 rounded-xl ml-20 mr-5"
+              >
+                <i class="fa-solid fa-arrow-up"></i></button
+            ></a>
+
+            <a href="#team"
+              ><button
+                class="bg-blue-900 text-white text-5xl p-5 mb-6 rounded-xl"
+              >
+                <i class="fa-solid fa-arrow-down"></i></button
+            ></a>
           </div>
         </div>
       </div>
     </div>
     <!-- Team -->
-    <div>
+    <div id="team">
       <h1
         class="mt-10 text-center mb-5 text-blue-700 font-bold text-2xl sm:text-3xl lg:text-4xl"
       >
@@ -372,43 +409,8 @@
       <div class="absolute inset-0 bg-black bg-opacity-50"></div>
 
       <footer
-        class="relative grid grid-cols-1 md:grid-cols-3 gap-4 text-white pb-10"
+        class="relative grid grid-cols-1 md:grid-cols-3 gap-4 pb-10 text-white"
       >
-        <form class="pl-5">
-          <h1 class="text-xl font-bold mb-5">Let's Hear from You</h1>
-          <label for="" class="block text-lg">Name</label>
-          <input
-            type="text"
-            class="rounded-lg border-blue-600 p-2 text-gray-950"
-          />
-          <br />
-          <br />
-          <label for="" class="block text-lg">Phone Number</label>
-          <input
-            type="text"
-            name=""
-            id=""
-            class="rounded-lg border-blue-600 p-2 text-gray-950"
-          />
-          <br />
-          <br />
-          <label for="" class="block text-lg">Email Address</label>
-          <input
-            type="email"
-            class="rounded-lg border-blue-600 p-2 text-gray-950"
-          />
-          <br />
-          <br />
-          <label for="Message" class="block text-lg">Messsage</label>
-          <textarea
-            name=""
-            id=""
-            placeholder="Type your message here"
-            cols="23"
-            class="rounded-lg border-blue-600 block text-gray-950 p-2"
-          ></textarea>
-          <button class="mt-4 px-8 py-1 rounded-xl bg-blue-700">Send</button>
-        </form>
         <div>
           <h1 class="text-xl font-bold">Contact Details</h1>
           <div class="flex mt-5 items-center mb-10">
@@ -440,6 +442,27 @@
             <a href="news.html" class="mt-5 hover:underline">News</a>
             <a href="contact.html" class="mt-5 hover:underline">Contact</a>
           </nav>
+        </div>
+        <div>
+          <h1 class="text-xl font-bold">Keep in Touch</h1>
+
+          <input
+            type="email"
+            placeholder="enter your email..."
+            class="my-8 py-3 px-4 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
+          />
+          <div class="relative">
+            <input
+              type="text"
+              placeholder="Enter your message..."
+              class="w-full py-3 px-4 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
+            />
+            <button
+              class="absolute right-2 top-1/2 transform -translate-y-1/2 bg-blue-500 text-white p-2 rounded-full hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
+            >
+              <i class="fa-solid fa-paper-plane"></i>
+            </button>
+          </div>
         </div>
       </footer>
       <p
