--- a/news.html
+++ b/news.html
@@ -17,16 +17,19 @@
     <div class="p-8 bg-white shadow-md">
       <div class="flex justify-between items-center">
         <!-- Logo Section -->
-        <div class="flex items-center">
-          <img
-            src="images/index.png"
-            alt="Company Logo"
-            class="h-10 ml-4 lg:ml-32"
-          />
-          <h1 class="font-bold text-2xl ml-3">
-            <span class="text-blue-500">Madoms</span> Global
-            <span class="text-blue-500">Trade</span>
-          </h1>
+        <div>
+          <a href="index.html" class="flex mr-10">
+            <img
+              src="images/index.png"
+              alt="Company Logo"
+              class="h-10 ml-4 lg:ml-32"
+            />
+
+            <h1 class="font-bold text-2xl ml-3">
+              <span class="text-blue-500">Madoms</span> Global
+              <span class="text-blue-500">Trade</span>
+            </h1>
+          </a>
         </div>
         <div class="block">
           <!-- Hamburger Menu Icon -->
@@ -208,84 +211,70 @@
         </div>
       </div>
     </div>
-    <!-- footer -->
-    <div
-      class="relative bg-cover bg-center p-8"
-      style="background-image: url('images/global.jpeg')"
-    >
-      <div class="absolute inset-0 bg-black bg-opacity-50"></div>
+<!-- footer -->
+<div
+class="relative bg-cover bg-center p-8"
+style="background-image: url('images/global.jpeg')"
+>
+<div class="absolute inset-0 bg-black bg-opacity-50"></div>
 
-      <footer
-        class="relative grid grid-cols-1 md:grid-cols-3 gap-4 text-white pb-10"
+<footer
+  class="relative grid grid-cols-1 md:grid-cols-3 gap-4 pb-10 text-white"
+>
+  <div>
+    <h1 class="text-xl font-bold">Contact Details</h1>
+    <div class="flex mt-5 items-center mb-10">
+      <i class="fa-solid fa-envelope text-3xl"></i>
+      <div class="ml-5 text-lg">
+        <p>enquiries@mgtnigeria.com</p>
+        <p>customercare@mgtnigeria.com</p>
+      </div>
+    </div>
+    <div class="flex items-center mb-10">
+      <i class="fa-solid fa-phone text-3xl"></i>
+      <p class="ml-5 text-lg">+2347033716203</p>
+    </div>
+    <div class="flex items-center mt-5">
+      <i class="fa-solid fa-location-dot text-3xl"></i>
+
+      <p class="ml-5 text-lg">
+        17, Olaniji Street, off Oregun Road, Ikeja, Lagos, Nigeria
+      </p>
+    </div>
+  </div>
+
+  <div class="pl-10">
+    <h1 class="text-xl font-bold">Quick Links</h1>
+    <nav class="flex flex-col text-lg">
+      <a href="index.html" class="mt-5 hover:underline">Home</a>
+      <a href="about.html" class="mt-5 hover:underline">About</a>
+      <a href="services.html" class="mt-5 hover:underline">Services</a>
+      <a href="news.html" class="mt-5 hover:underline">News</a>
+      <a href="contact.html" class="mt-5 hover:underline">Contact</a>
+    </nav>
+  </div>
+  <div>
+    <h1 class="text-xl font-bold">Keep in Touch</h1>
+
+    <input
+      type="email"
+      placeholder="enter your email..."
+      class="my-8 py-3 px-4 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
+    />
+    <div class="relative">
+      <input
+        type="text"
+        placeholder="Enter your message..."
+        class="w-full py-3 px-4 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
+      />
+      <button
+        class="absolute right-2 top-1/2 transform -translate-y-1/2 bg-blue-500 text-white p-2 rounded-full hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
       >
-        <form class="pl-5">
-          <h1 class="text-xl font-bold mb-5">Let's Hear from You</h1>
-          <label for="" class="block text-lg">Name</label>
-          <input
-            type="text"
-            class="rounded-lg border-blue-600 p-2 text-gray-950"
-          />
-          <br />
-          <br />
-          <label for="" class="block text-lg">Phone Number</label>
-          <input
-            type="text"
-            name=""
-            id=""
-            class="rounded-lg border-blue-600 p-2 text-gray-950"
-          />
-          <br />
-          <br />
-          <label for="" class="block text-lg">Email Address</label>
-          <input
-            type="email"
-            class="rounded-lg border-blue-600 p-2 text-gray-950"
-          />
-          <br />
-          <br />
-          <label for="Message" class="block text-lg">Messsage</label>
-          <textarea
-            name=""
-            id=""
-            placeholder="Type your message here"
-            cols="23"
-            class="rounded-lg border-blue-600 block text-gray-950 p-2"
-          ></textarea>
-          <button class="mt-4 px-8 py-1 rounded-xl bg-blue-700">Send</button>
-        </form>
-        <div>
-          <h1 class="text-xl font-bold">Contact Details</h1>
-          <div class="flex mt-5 items-center mb-10">
-            <i class="fa-solid fa-envelope text-3xl"></i>
-            <div class="ml-5 text-lg">
-              <p>enquiries@mgtnigeria.com</p>
-              <p>customercare@mgtnigeria.com</p>
-            </div>
-          </div>
-          <div class="flex items-center mb-10">
-            <i class="fa-solid fa-phone text-3xl"></i>
-            <p class="ml-5 text-lg">+2347033716203</p>
-          </div>
-          <div class="flex items-center mt-5">
-            <i class="fa-solid fa-location-dot text-3xl"></i>
-
-            <p class="ml-5 text-lg">
-              17, Olaniji Street, off Oregun Road, Ikeja, Lagos, Nigeria
-            </p>
-          </div>
-        </div>
-
-        <div class="pl-10">
-          <h1 class="text-xl font-bold">Quick Links</h1>
-          <nav class="flex flex-col text-lg">
-            <a href="index.html" class="mt-5 hover:underline">Home</a>
-            <a href="about.html" class="mt-5 hover:underline">About</a>
-            <a href="services.html" class="mt-5 hover:underline">Services</a>
-            <a href="news.html" class="mt-5 hover:underline">News</a>
-            <a href="contact.html" class="mt-5 hover:underline">Contact</a>
-          </nav>
-        </div>
-      </footer>
+        <i class="fa-solid fa-paper-plane"></i>
+      </button>
+    </div>
+  </div>
+</footer>
       <p
         class="absolute bottom-0 left-0 w-full text-center bg-blue-700 px-5 py-3 text-white"
       >
