--- a/about.html
+++ b/about.html
@@ -303,20 +303,23 @@
               </p>
             </div>
           </div>
-          <div class="hidden lg:block mt-11">
+          
+          <div class="hidden lg:block">
             <a href="index.html">
               <button
-                class="bg-blue-900 text-white text-5xl p-5 mb-6 rounded-xl ml-20 mr-5"
+                class="bg-blue-900 text-white text-5xl p-5 mb-6 rounded-xl ml-20 mr-5 transition transform hover:bg-blue-700 hover:scale-110 focus:outline-none focus:ring-4 focus:ring-blue-300"
               >
-                <i class="fa-solid fa-arrow-up"></i></button
-            ></a>
+                <i class="fa-solid fa-arrow-up"></i>
+              </button>
+            </a>
 
-            <a href="#team"
-              ><button
-                class="bg-blue-900 text-white text-5xl p-5 mb-6 rounded-xl"
+            <a href="#team">
+              <button
+                class="bg-blue-900 text-white text-5xl p-5 mb-6 rounded-xl transition transform hover:bg-blue-700 hover:scale-110 focus:outline-none focus:ring-4 focus:ring-blue-300"
               >
-                <i class="fa-solid fa-arrow-down"></i></button
-            ></a>
+                <i class="fa-solid fa-arrow-down"></i>
+              </button>
+            </a>
           </div>
         </div>
       </div>
