--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <div
         class="relative flex items-center justify-center lg:justify-start py-16 md:py-24 lg:ml-32 text-white"
       >
-        <div class="max-w-4xl px-4 text-center lg:text-left">
+        <div class="max-w-4xl px-4 text-center">
           <p
             class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold leading-snug"
           >
@@ -353,19 +353,21 @@
           <div class="hidden lg:block">
             <a href="index.html">
               <button
-                class="bg-blue-900 text-white text-5xl p-5 mb-6 rounded-xl ml-20 mr-5"
+                class="bg-blue-900 text-white text-5xl p-5 mb-6 rounded-xl ml-20 mr-5 transition transform hover:bg-blue-700 hover:scale-110 focus:outline-none focus:ring-4 focus:ring-blue-300"
               >
-                <i class="fa-solid fa-arrow-up"></i></button
-            ></a>
-
-            <a href="#testimonial-container"
-              ><button
-                class="bg-blue-900 text-white text-5xl p-5 mb-6 rounded-xl"
+                <i class="fa-solid fa-arrow-up"></i>
+              </button>
+            </a>
+          
+            <a href="#testimonial-container">
+              <button
+                class="bg-blue-900 text-white text-5xl p-5 mb-6 rounded-xl transition transform hover:bg-blue-700 hover:scale-110 focus:outline-none focus:ring-4 focus:ring-blue-300"
               >
-                <i class="fa-solid fa-arrow-down"></i></button
-            ></a>
+                <i class="fa-solid fa-arrow-down"></i>
+              </button>
+            </a>
           </div>
-        </div>
+          
       </div>
     </div>
     <!-- stats -->
