--- a/index.html
+++ b/index.html
@@ -314,41 +314,48 @@
         <h1 class="text-3xl text-blue-700 font-bold mb-10 text-center">
           Why Choose MGT?
         </h1>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 gap-10">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 sm:gap-8">
           <!-- item -->
           <div
-            class="flex items-center gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
+            class="flex flex-wrap items-center  gap-4 sm:gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
           >
             <i class="fa-solid fa-thumbs-up text-6xl text-white"></i>
-            <h2 class="text-lg font-bold text-white">We are Trusted</h2>
+            <h2 class="text-base sm:text-lg font-bold text-white text-center whitespace-normal">
+              We are Trusted</h2>
           </div>
           <!-- item -->
           <div
-            class="flex items-center gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
+            class="flex flex-wrap items-center gap-4 sm:gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
           >
             <i class="fa-solid fa-headset text-6xl text-white"></i>
-            <h2 class="text-lg font-bold text-white">All-round Support</h2>
-          </div>
+            <h2 class="text-base sm:text-lg font-bold text-white text-center whitespace-normal">
+              All-round Support
+          </h2>
+          
+                    </div>
           <!-- item -->
           <div
-            class="flex items-center gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
+            class="flex flex-wrap items-center  gap-4 sm:gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
           >
             <i class="fa-solid fa-truck-fast text-6xl text-white"></i>
-            <h2 class="text-lg font-bold text-white">Fast Delivery</h2>
+            <h2 class="text-base sm:text-lg font-bold text-white text-center whitespace-normal">
+              Fast Delivery</h2>
           </div>
           <!-- item -->
           <div
-            class="flex items-center gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
+            class="flex flex-wrap items-center  gap-4 sm:gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
           >
             <i class="fa-solid fa-award text-6xl text-white"></i>
-            <h2 class="text-lg font-bold text-white">100% Guarantee</h2>
+            <h2 class="text-base sm:text-lg font-bold text-white text-center whitespace-normal">
+              100% Guarantee</h2>
           </div>
           <!-- item -->
           <div
-            class="flex items-center gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
+            class="flex flex-wrap items-center  gap-4 sm:gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
           >
             <i class="fa-solid fa-user-group text-6xl text-white"></i>
-            <h2 class="text-lg font-bold text-white">Highly Dedicated Team</h2>
+            <h2 class="text-base sm:text-lg font-bold text-white text-center whitespace-normal">
+              Highly Dedicated Team</h2>
           </div>
           <div class="hidden lg:block">
             <a href="index.html">
