--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,6 @@
 
     <!-- form  -->
     <div class="max-w-lg sm:max-w-xl md:max-w-3xl mx-auto my-10">
-
       <form action="" class="bg-blue-700 p-5 sm:p-8 md:p-10 rounded-lg">
         <h1 class="text-3xl font-bold mb-5 text-white">
           Want to Leave us a Message?
@@ -142,45 +141,58 @@
         <label for="name" class="block text-white ml-5 text-lg font-semibold"
           >Name</label
         >
-        <input id="name" type="text" class="w-full border p-3 rounded-lg my-3"   placeholder="Enter your name"
+        <input
+          id="name"
+          type="text"
+          class="w-full border p-3 rounded-lg my-3"
+          placeholder="Enter your name"
+        />
+        <label for="phone" class="block text-white ml-5 text-lg"
+          >Phone Number</label
         >
-        <label for="phone" class="block text-white ml-5 text-lg">Phone Number</label>
-        <input id="phone" type="text" class="w-full border p-3 rounded-lg my-3"   placeholder="Enter your phone number"
-        >
+        <input
+          id="phone"
+          type="text"
+          class="w-full border p-3 rounded-lg my-3"
+          placeholder="Enter your phone number"
+        />
         <label for="email" class="block text-white ml-5 text-lg"
           >Email Address</label
         >
-        <input id="email" type="text" class="w-full border p-3 rounded-lg my-3"   placeholder="Enter your email address"
-        >
+        <input
+          id="email"
+          type="text"
+          class="w-full border p-3 rounded-lg my-3"
+          placeholder="Enter your email address"
+        />
         <label for="" class="block text-white ml-5 text-lg">Message</label>
         <textarea
           name=""
           id=""
           rows="10"
           cols="5"
-          class="w-full border p-3 rounded-lg m-3"   placeholder="Enter your message"
-
+          class="w-full border p-3 rounded-lg m-3"
+          placeholder="Enter your message"
         ></textarea>
         <button
-        class="bg-white text-gray-700 font-bold px-4 py-3 md:px-5 md:py-4 ml-3 rounded-lg hover:bg-blue-800 hover:text-white"
-      >
-      
+          class="bg-white text-gray-700 font-bold px-4 py-3 md:px-5 md:py-4 ml-3 rounded-lg hover:bg-blue-800 hover:text-white"
+        >
           Send a Message
         </button>
       </form>
     </div>
-    <div class="w-full">
+    <div class="max-w-lg sm:max-w-xl md:max-w-3xl mx-auto">
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d63413.39202775475!2d3.3456840000000003!3d6.604978!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b924c2e750a45%3A0xa7634701f0882ebf!2sOregun%2C%20Lagos!5e0!3m2!1sen!2sng!4v1737711999569!5m2!1sen!2sng"
-        width="1350"
-        height="500"
+        src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d507384.15198524395!2d3.131018575551771!3d6.529428303155078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1soregun%20ikeja%20zip%20code!5e0!3m2!1sen!2sng!4v1737724031499!5m2!1sen!2sng"
+        width="760"
+        height="450"
         style="border: 0"
         allowfullscreen=""
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
     </div>
-    <!-- footer -->
+    <!-- Footer -->
     <div
       class="relative bg-cover bg-center p-8"
       style="background-image: url('images/global.jpeg')"
@@ -188,31 +200,32 @@
       <div class="absolute inset-0 bg-black bg-opacity-50"></div>
 
       <footer
-        class="relative grid grid-cols-1 md:grid-cols-3 gap-4 pb-10 text-white"
+        class="relative grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 pb-10 text-white"
       >
+        <!-- Contact Details -->
         <div>
           <h1 class="text-xl font-bold">Contact Details</h1>
-          <div class="flex mt-5 items-center mb-10">
+          <div class="flex mt-5 items-start mb-8">
             <i class="fa-solid fa-envelope text-3xl"></i>
-            <div class="ml-5 text-lg">
+            <div class="ml-4 text-lg">
               <p>enquiries@mgtnigeria.com</p>
               <p>customercare@mgtnigeria.com</p>
             </div>
           </div>
-          <div class="flex items-center mb-10">
+          <div class="flex items-center mb-8">
             <i class="fa-solid fa-phone text-3xl"></i>
-            <p class="ml-5 text-lg">+2347033716203</p>
+            <p class="ml-4 text-lg">+2347033716203</p>
           </div>
-          <div class="flex items-center mt-5">
+          <div class="flex items-start">
             <i class="fa-solid fa-location-dot text-3xl"></i>
-
-            <p class="ml-5 text-lg">
+            <p class="ml-4 text-lg">
               17, Olaniji Street, off Oregun Road, Ikeja, Lagos, Nigeria
             </p>
           </div>
         </div>
 
-        <div class="pl-10">
+        <!-- Quick Links -->
+        <div>
           <h1 class="text-xl font-bold">Quick Links</h1>
           <nav class="flex flex-col text-lg">
             <a href="index.html" class="mt-5 hover:underline">Home</a>
@@ -222,34 +235,38 @@
             <a href="contact.html" class="mt-5 hover:underline">Contact</a>
           </nav>
         </div>
+
+        <!-- Keep in Touch -->
         <div>
           <h1 class="text-xl font-bold">Keep in Touch</h1>
-
           <input
             type="email"
-            placeholder="enter your email..."
-            class="my-8 py-3 px-4 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
+            placeholder="Enter your email..."
+            class="block py-3 px-4 my-6 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500 "
           />
           <div class="relative">
             <input
               type="text"
               placeholder="Enter your message..."
-              class="w-full py-3 px-4 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
+              class="w-full max-w-md py-3 px-4 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500 mx-auto"
             />
             <button
-              class="absolute right-2 top-1/2 transform -translate-y-1/2 bg-blue-500 text-white p-2 rounded-full hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
+              class="absolute right-3 top-1/2 transform -translate-y-1/2 bg-blue-500 text-white p-2 rounded-full hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
             >
               <i class="fa-solid fa-paper-plane"></i>
             </button>
           </div>
         </div>
       </footer>
+
+      <!-- Footer Bottom -->
       <p
         class="absolute bottom-0 left-0 w-full text-center bg-blue-700 px-5 py-3 text-white"
       >
         © <span id="year"></span> Madoms Global Trade. All rights reserved.
       </p>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
