--- a/contact.html
+++ b/contact.html
@@ -181,17 +181,17 @@
         </button>
       </form>
     </div>
-    <div class="">
+    <!-- map -->
+    <div class="w-full">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d507384.15198524395!2d3.131018575551771!3d6.529428303155078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1soregun%20ikeja%20zip%20code!5e0!3m2!1sen!2sng!4v1737724031499!5m2!1sen!2sng"
-        width="600"
-        height="450"
-        style="border: 0"
+        style="border: 0; width: 100%; height: 450px"
         allowfullscreen=""
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
     </div>
+
     <!-- Footer -->
     <div
       class="relative bg-cover bg-center p-8"
