--- a/contact.html
+++ b/contact.html
@@ -171,7 +171,7 @@
           id=""
           rows="10"
           cols="5"
-          class="w-full border p-3 rounded-lg m-3"
+          class="w-full border p-3 rounded-lg my-3"
           placeholder="Enter your message"
         ></textarea>
         <button
@@ -184,8 +184,10 @@
     <!-- map -->
     <div class="w-full">
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d507384.15198524395!2d3.131018575551771!3d6.529428303155078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1soregun%20ikeja%20zip%20code!5e0!3m2!1sen!2sng!4v1737724031499!5m2!1sen!2sng"
-        style="border: 0; width: 100%; height: 450px"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126846.01254230349!2d3.281127054967959!3d6.52952875554641!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b9228fa2a3999%3A0xd7a8324bddbba1f0!2sIkeja%2C%20Lagos!5e0!3m2!1sen!2sng!4v1737735860091!5m2!1sen!2sng"
+        width="100%"
+        height="450px"
+        style="border: 0"
         allowfullscreen=""
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
@@ -261,7 +263,7 @@
 
       <!-- Footer Bottom -->
       <p
-        class="absolute bottom-0 left-0 w-full text-center bg-blue-700 px-5 py-3 text-white"
+        class="absolute bottom-0 left-0 w-full text-center bg-blue-700 px-5 py-3 text-white mt-8"
       >
         © <span id="year"></span> Madoms Global Trade. All rights reserved.
       </p>
